src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>This field is mapping the existing market segments from 11i</description>
        <label>Market Segment</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Architect/Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Maint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLLISION SHOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTAINER - CONTAINER - DRY CARGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTAINER - CONTAINER - REFRIGERATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTAINER - CONTAINER - REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END USER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floors, Doors, Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gov/School/ORG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hdwe/Home Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEAVY MACHINERY - HEAVY MACHINERY - CONSTRUCTION EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEAVY MACHINERY - HEAVY MACHINERY - HEAVY AG EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merged_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Change 521836 GI Service Cloud - Indicates that this Account is the combination of 2 or more Ship Tos from 11i/Legacy system</description>
        <label>Merged Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merged_ShipTos__c</fullName>
        <description>Change 521836 GI Service Cloud - List of rolled up/merged ship Tos from Legacy systems</description>
        <label>Merged ShipTos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>National pro accounts for Lowe&apos;s</description>
        <label>National Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Error: This is not a recognized national account.  Please check spelling.</errorMessage>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>National</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (National Account)</relationshipLabel>
        <relationshipName>LowesNationalAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Painters__c</fullName>
        <label>Number of Painters</label>
        <summarizedField>Account_Intelligence__c.Number_of_Painters__c</summarizedField>
        <summaryForeignKey>Account_Intelligence__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OEM_Approvals__c</fullName>
        <description>The car manufacturers the account works with (added for Automotive).</description>
        <label>OEM Approvals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>ACE: Open Date - used to populate the date the Ace Store was opened</description>
        <inlineHelpText>Date Store was opened</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Day__c</fullName>
        <label>Order Day</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Receipt_Process__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Order Receipt Process</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Over_Ship_Tolerance__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Over Ship Tolerance</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Region__c</fullName>
        <description>Get the account owner manager&apos;s region.</description>
        <formula>text(Owner.Manager.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Territory__c</fullName>
        <description>Get the territory from the account owner user record.</description>
        <formula>Owner.Territory__c</formula>
        <label>Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pipe_Market_Sub_Segment__c</fullName>
        <description>2/10/13 kstendahl Incident 301606 - change name from Pipe Market Sub Segment to Approval Market</description>
        <label>Approval Market</label>
        <picklist>
            <picklistValues>
                <fullName>Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Fiscal_YTD_Sales__c</fullName>
        <description>Calculated and synched from Analytics</description>
        <label>Previous Fiscal YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Fiscal_Year_Sales__c</fullName>
        <description>From Analytics calculated and synched field</description>
        <label>Previous Fiscal Year Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <picklist>
            <picklistValues>
                <fullName>Acrylic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Acrylics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solvent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Based</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Category__c</fullName>
        <description>EPS Field for Pricing Notification</description>
        <label>Pricing Category</label>
        <picklist>
            <picklistValues>
                <fullName>Index Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Index Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Indexed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <description>11i Ship To Customer GL Class</description>
        <inlineHelpText>Also GI &quot;Technology Used&quot;</inlineHelpText>
        <label>Profit Center</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>4353 HBF GI Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4369-E COAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4653-US DEC PWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5613-DIGITAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5614-REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5620-AUTOMOTIVE OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5650-Private Brands Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC4356 Coil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC4857</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC4937-GI Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTIPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTRUSION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>This is the default account segmentation. The values are generic to be used across the organization.
10/6 Change 521836 GI Service Cloud - now Synced from 11i Ship To - converted to Platinum/Gold/Silver/Bronze</description>
        <label>Rating</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Adopter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receiving_Hours__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Receiving Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Receiving_Phone__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Receiving Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2nd Account that has a relationship to this Account</inlineHelpText>
        <label>Related Account 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Related Account 2 from Opp)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>3rd Account that has a relationship to this Account.  Any addional Accounts should be noted in &quot;Account Details&quot;</inlineHelpText>
        <label>Related Account 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Related Account 3 from Opps)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reset_Date__c</fullName>
        <description>Used by Ace and B&amp;Q to track when a location was set with Valspar products -KA</description>
        <label>Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Sales_LY__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Wattyl Trade, data transfered from Analytics at the end of the previous month.</description>
        <label>Rolling 13-24 Month Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Sales_Margin_LY__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Wattyl Trade, data transfered from Analytics at the end of the previous month.</description>
        <label>Rolling 13-24 Month Sales Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Sales_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Wattyl Trade, data transfered from Analytics at the end of the previous month.</description>
        <label>Rolling 1-12 Month Sales Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Sales_Volume_LY__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Wattyl Trade, data transfered from Analytics at the end of the previous month.</description>
        <label>Rolling 13-24 Month Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Sales_Volume_TY__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Wattyl Trade, data transfered from Analytics at the end of the previous month.</description>
        <label>Rolling 1-12 Month Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_12_Month_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Wattyl Trade, data transfered from Analytics at the end of the previous month.</description>
        <label>Rolling 1-12 Month Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling_1_12_Month_Avg_Monthly_Purchases__c</fullName>
        <description>For Wattyl Trade to calculate average month purchases based on the Rolling 1-12 Months of Sales.</description>
        <formula>Rolling_12_Month_Sales__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolling 1-12 Month Avg Monthly Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Change__c</fullName>
        <description>For Wattyl Trade</description>
        <formula>( Rolling_12_Month_Sales__c - Rolling_12_Month_Sales_LY__c )/Rolling_12_Month_Sales_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales % Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Margin_Difference__c</fullName>
        <description>For Wattyl Trade</description>
        <formula>(Rolling_12_Month_Sales_Margin__c -Rolling_12_Month_Sales_Margin_LY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Margin Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Equivilant to the 11i Operating Unit</description>
        <label>Sales Org</label>
        <picklist>
            <picklistValues>
                <fullName>CANADA OPERATING UNIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS OPERATING UNIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VALSPAR OPERATING UNIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Volume_Change__c</fullName>
        <description>For Wattyl Trade</description>
        <formula>(  Rolling_12_Month_Sales_Volume_TY__c  -  Rolling_12_Month_Sales_Volume_LY__c  )/ Rolling_12_Month_Sales_Volume_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Volume % Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Share_of_Wallet__c</fullName>
        <description>For Wattyl Trade</description>
        <formula>IF(((Rolling_12_Month_Sales__c /(Number_of_Painters__c*10000))&gt; 1.0), 1.0, (Rolling_12_Month_Sales__c/ (Number_of_Painters__c*10000) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share of Wallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShipToSiteUseId__c</fullName>
        <description>11i Site use id from the customer master ship to record</description>
        <externalId>true</externalId>
        <label>ShipToSiteUseId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_From_Whse__c</fullName>
        <label>Ship From Whse</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Notes__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Shipping Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soft_Store_Opening_Date__c</fullName>
        <description>MASTERS</description>
        <inlineHelpText>Date soft store opening occurred</inlineHelpText>
        <label>Soft Store Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Account_Id__c</fullName>
        <description>This field will hold the Id of the Account from the source Salesforce org.  This will be utilized to maintain relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field will hold the Id of the Account from the source Salesforce org.  This will be utilized to maintain relationships.</inlineHelpText>
        <label>Source Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Sprcial_Shipping_Requirements__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Special Shipping/Delivery Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Code__c</fullName>
        <description>Store Code for each B&amp;Q Store
4/17: changed name to genericize for Lowe&apos;s Stores</description>
        <label>Store Code/Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Delivery_Day__c</fullName>
        <formula>Distributor__r.Order_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Delivery Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Omit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Omit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Proposition__c</fullName>
        <description>B&amp;Q Store Proposition</description>
        <label>Store Proposition</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Type__c</fullName>
        <description>B&amp;Q Store Type</description>
        <label>Store Type</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manifesto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcontractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter if you have a relationship with a subcontractor.</description>
        <inlineHelpText>Account that has a relationship to this account record i.e.: (GI) The record you are currently on(xxxxxx) sells painted products/parts to another Valspar Customer (John Deere).</inlineHelpText>
        <label>Related Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Sub-Contractor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_LW_Sales__c</fullName>
        <label>Target Last Week Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Participation__c</fullName>
        <label>Target Participation %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_QTD_Sales__c</fullName>
        <label>Target QTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_YTD_Sales__c</fullName>
        <label>Target YTD Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technologies_Used__c</fullName>
        <inlineHelpText>Enter coatings technologies used by Account</inlineHelpText>
        <label>Technologies Used</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Change 521836 GI Service Cloud</description>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecoat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Telephone_HO_Suppliers_Staff__c</fullName>
        <description>B&amp;Q: Additional Phone Number for the  HO/ Suppliers/ Staff</description>
        <label>Telephone HO/ Suppliers/ Staff</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Email__c</fullName>
        <label>Territory Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Name__c</fullName>
        <label>Territory Manager Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tint_Machine__c</fullName>
        <description>For Consumer Ace</description>
        <label>Tint Machine</label>
        <picklist>
            <picklistValues>
                <fullName>COROB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM - AT1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM - AT7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM - XSMART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tinted_Paint_Growth__c</fullName>
        <description>B&amp;Q: Objective: Tinted Paint Growth (%)</description>
        <inlineHelpText>Objective: Tinted Paint Growth (%)</inlineHelpText>
        <label>Tinted Paint Growth %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tinting_Paint_Participation__c</fullName>
        <description>B&amp;Q: Objective: Tinting Paint Participation (% of paint turnover that is tinted)</description>
        <inlineHelpText>B&amp;Q: Objective: Tinting Paint Participation (% of paint turnover that is tinted)</inlineHelpText>
        <label>Tinting Paint Participation %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Top_100__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Valspar&apos;s Corporate Rating - Maintained by Corporate only</inlineHelpText>
        <label>Top 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Spend__c</fullName>
        <inlineHelpText>Enter amount of total amount spent by Account on coatings.</inlineHelpText>
        <label>Total Annual Spend</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Unit_UOM__c</fullName>
        <inlineHelpText>Enter UOM of the Annual Units purchased by Account.  (LB, KG, GAL, LTR)</inlineHelpText>
        <label>Total Annual Unit UOM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Units__c</fullName>
        <inlineHelpText>Enter the total amount of units Account purchases annually, from all Suppliers.
Include UOM.</inlineHelpText>
        <label>Total Annual Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for B&amp;Q - designates if the Store had a &apos;Trade Point&apos; desk</description>
        <label>Trade Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ultimate_Customer_Ranking__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Ultimate Customer Ranking</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Suggested_Call_Cycle_Date__c</fullName>
        <formula>LastActivityDate + CASE(Ultimate_Suggested_Call_Cycle__c , &quot;Weekly&quot;, 7, &quot;Fortnightly&quot;, 14, &quot;Monthly&quot;, 30, &quot;6 Weekly&quot;, 44, &quot;Phone Call&quot;, 365, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Suggested Call Cycle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ultimate_Suggested_Call_Cycle__c</fullName>
        <description>Used for Wattyl Trade, field value generated by SetCustomerGradingOnAccount trigger.</description>
        <label>Ultimate Suggested Call Cycle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>